--- a/dos_neu.html
+++ b/dos_neu.html
@@ -9,6 +9,12 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+     <!-- footer css -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
+     <!-- eigene CSS -->
     <link rel="stylesheet" href="css/style.css">
 
     <title>All about WoW</title>
@@ -65,12 +71,12 @@
                 <form class="d-flex">
                     <div class="nav-item">
                         <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color reg "
-                            aria-current="page" href="registrieren.html">Registrieren</a>
-                      </div>
-                      <div class="nav-item">
+                            aria-current="page" href="registrieren.html"><i class="bi bi-file-earmark-person"></i>&NonBreakingSpace;Registrieren</a>
+                    </div>
+                    <div class="nav-item">
                         <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color log "
-                            aria-current="page" href="login.html">Login</a>
-                      </div>
+                            aria-current="page" href="login.html"><i class="bi bi-box-arrow-in-right"></i>&NonBreakingSpace;Login</a>
+                    </div>
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
@@ -79,25 +85,257 @@
     </nav>
     <div class="center row">
         <div class="inhalt">
-            <div> </div>
+
             <div class="col-md-8 offset-2 text1">
                 <img src="img/kisspng-world-of-warcraft-logo-blizzard-entertainment-priv-portfolio-the-art-of-david-luong-5b7b8ea442e6b8.489604311534824100274 (1).png"
                     alt="Logo" class="logo">
-                <h1>Die Andre Seite</h1>            
+                <h1>Die Andre Seite</h1>
+                <div class="ba">
+                    <a href="img/wow_shadowlands_dungeon_andere_seite_15-hakar.jpg" data-lightbox="photos" data-title=hakar>
+                   <img src="img/wow_shadowlands_dungeon_andere_seite_15-hakar.jpg" alt="Dungeon Boss Hakar" class="w-100 Dungeonboss"> </a>
+                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
+                    dolor.
+                    Aenean massa.
+                    Cum
+                    sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
+                    ultricies
+                    nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
+                    fringilla
+                    vel,
+                    aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
+                    Nullam
+                    dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.
+                    Aenean
+                    vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
+                    Aliquam
+                    lorem
+                    ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet.
+                    Quisque
+                    rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam
+                    eget
+                    dui.
+                    Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet
+                    adipiscing
+                    sem neque sed ipsum.<br />
+                    <a href="img/wow_shadowlands_dungeon_andere_seite_manasturm1.jpg" data-lightbox="photos" data-title="Manasturm">
+                    <img src="img/wow_shadowlands_dungeon_andere_seite_manasturm1.jpg" alt="Dungeon Boss Manasturm" class="w-100 Dungeonboss"> </a>
+                    Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante
+                    tincidunt
+                    tempus.
+                    Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros
+                    faucibus
+                    tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed
+                    consequat,
+                    leo
+                    eget
+                    bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend
+                    sapien.
+                    Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui.
+                    Cras
+                    ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et
+                    ultrices
+                    posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu. Duis arcu
+                    tortor,
+                    suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante
+                    arcu,
+                    accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum
+                    rutrum
+                    nunc. Nunc nonummy metus.<br />
+                    <br />
+                    Vestibulum volutpat pretium libero. Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam
+                    nulla
+                    eros, ultricies sit amet, nonummy id, imperdiet feugiat, pede. Sed lectus. Donec mollis hendrerit
+                    risus.
+                    Phasellus nec sem in justo pellentesque facilisis. Etiam imperdiet imperdiet orci. Nunc nec neque.
+                    Phasellus
+                    leo dolor, tempus non, auctor et, hendrerit quis, nisi. Curabitur ligula sapien, tincidunt non,
+                    euismod
+                    vitae,
+                    posuere imperdiet, leo. Maecenas malesuada. Praesent congue erat at massa. Sed cursus turpis vitae
+                    tortor.
+                    Donec posuere vulputate arcu. Phasellus accumsan cursus velit. Vestibulum ante ipsum primis in
+                    faucibus
+                    orci
+                    luctus et ultrices posuere cubilia Curae; Sed aliquam, nisi quis porttitor congue, elit erat euismod
+                    orci,
+                    ac
+                    placerat dolor lectus quis orci. Phasellus consectetuer vestibulum elit. Aenean tellus metus,
+                    bibendum
+                    sed,
+                    posuere ac, mattis non, nunc. Vestibulum fringilla pede sit amet augue. In turpis. Pellentesque
+                    posuere.
+                    Praesent turpis.<br />
+                    <br />
+                    Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor
+                    sagittis
+                    lacus. Donec elit libero, sodales nec, volutpat a, suscipit non, turpis. Nullam sagittis.
+                    Suspendisse
+                    pulvinar, augue ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit pede quis
+                    nunc.
+                    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce id
+                    purus.
+                    Ut
+                    varius tincidunt libero. Phasellus dolor. Maecenas vestibulum mollis diam. Pellentesque ut neque.
+                    Pellentesque
+                    habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In dui magna,
+                    posuere
+                    eget,
+                    vestibulum et, tempor auctor, justo. In ac felis quis tortor malesuada pretium. Pellentesque auctor
+                    neque
+                    nec
+                    urna. Proin sapien ipsum, porta a, auctor quis, euismod ut, mi. Aenean viverra rhoncus pede.
+                    Pellentesque
+                    habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut non enim
+                    eleifend
+                    felis
+                    pretium feugiat. Vivamus quis mi.<br />
+                    <br />
+                    Phasellus a est. Phasellus magna. In hac habitasse platea dictumst. Curabitur at lacus ac velit
+                    ornare
+                    lobortis. Curabitur a felis in nunc fringilla tristique. Morbi mattis ullamcorper velit. Phasellus
+                    gravida
+                    semper nisi. Nullam vel sem. Pellentesque libero tortor, tincidunt et, tincidunt eget, semper nec,
+                    quam.
+                    Sed
+                    hendrerit. Morbi ac felis. Nunc egestas, augue at pellentesque laoreet, felis eros vehicula leo, at
+                    malesuada
+                    velit leo quis pede. Donec interdum, metus et hendrerit aliquet, dolor diam sagittis ligula, eget
+                    egestas
+                    libero turpis vel mi. Nunc nulla. Fusce risus nisl, viverra et, tempor et, pretium in, sapien. Donec
+                    venenatis
+                    vulputate lorem. Morbi nec metus. Phasellus blandit leo ut odio. Maecenas ullamcorper, dui et
+                    placerat
+                    feugiat, eros pede varius nisi, condimentum viverra felis nunc et lorem. Sed magna purus, fermentum
+                    eu,
+                    tincidunt eu, varius ut, felis. In auctor lobortis lacus. Quisque libero metus, condimentum nec,
+                    tempor
+                    a,
+                    commodo mollis, magna. Vestibulum ullamcorper mauris at ligula.<br />
+                    <br />
+                    Fusce fermentum. Nullam cursus lacinia erat. Praesent blandit laoreet nibh. Fusce convallis metus id
+                    felis
+                    luctus adipiscing. Pellentesque egestas, neque sit amet convallis pulvinar, justo nulla eleifend
+                    augue,
+                    ac
+                    auctor orci leo non est. Quisque id mi. Ut tincidunt tincidunt erat. Etiam feugiat lorem non metus.
+                    Vestibulum
+                    dapibus nunc ac augue. Curabitur vestibulum aliquam leo. Praesent egestas neque eu enim. In hac
+                    habitasse
+                    platea dictumst. Fusce a quam. Etiam ut purus mattis mauris sodales aliquam. Curabitur nisi. Quisque
+                    malesuada
+                    placerat nisl. Nam ipsum risus, rutrum vitae, vestibulum eu, molestie vel, lacus. Sed augue ipsum,
+                    egestas
+                    nec, vestibulum et, malesuada adipiscing, dui. Vestibulum facilisis, purus nec pulvinar iaculis,
+                    ligula
+                    mi
+                    congue nunc, vitae euismod ligula urna in dolor. Mauris sollicitudin fermentum libero. Praesent
+                    nonummy
+                    mi
+                    in
+                    odio. Nunc interdum lacus sit amet orci. Vestibulum rutrum, mi nec elementum vehicula, eros quam
+                    gravida
+                    nisl,
+                    id fringilla neque ante vel mi. Morbi mollis tellus ac sapien. Phasellus volutpat, metus eget
+                    egestas
+                    mollis,
+                    lacus lacus blandit dui, id egestas quam mauris ut lacus. Fusce vel dui. Sed in libero ut nibh
+                    placerat
+                    accumsan. Proin faucibus arcu quis ante. In consectetuer turpis ut velit. Nulla sit amet est.
+                    Praesent
+                    metus
+                    tellus, elementum eu, semper a, adipiscing nec, purus. Cras risus ipsum, faucibus ut, ullamcorper
+                    id,
+                    varius
+                    ac, leo. Suspendisse feugiat. Suspendisse enim turpis, dictum sed, iaculis a, condimentum nec, nisi.
+                    Praesent
+                    nec nisl a purus blandit viverra. Praesent ac massa at ligula laoreet iaculis. Nulla neque dolor,
+                    sagittis
+                    eget, iaculis quis, molestie non, velit. Mauris turpis nunc, blandit et, volutpat molestie, porta
+                    ut,
+                    ligula.
+                    Fusce pharetra convallis urna. Quisque ut nisi. Donec mi odio, faucibus at, scelerisque quis,
+                </div>
             </div>
         </div>
-        <div class="footer">
-            Dravock Software Production
-        </div>
     </div>
+<!-- footer Start -->
+<footer class="mainfooter" role="contentinfo">
+    <div class="footer-middle">
+      <div class="container">
+        <div class="row col-lg-12">
+          <div class="col-lg-3 col-sm-6">
+            <!--Column1-->
+            <div class="footer-pad">
+              <h4>Heading 1</h4>
+              <ul class="list-unstyled">
+                <li><a href="#"></a></li>
+                <li><a href="#">Payment Center</a></li>
+                <li><a href="#">Contact Directory</a></li>
+                <li><a href="#">Forms</a></li>
+                <li><a href="#">News and Updates</a></li>
+                <li><a href="#">FAQs</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+            <!--Column1-->
+            <div class="footer-pad">
+              <h4>Heading 2</h4>
+              <ul class="list-unstyled">
+                <li><a href="#">Website Tutorial</a></li>
+                <li><a href="#">Accessibility</a></li>
+                <li><a href="#">Disclaimer</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">FAQs</a></li>
+                <li><a href="#">Webmaster</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+            <!--Column1-->
+            <div class="footer-pad">
+              <h4>Heading 3</h4>
+              <ul class="list-unstyled">
+                <li><a href="#">Parks and Recreation</a></li>
+                <li><a href="#">Public Works</a></li>
+                <li><a href="#">Police Department</a></li>
+                <li><a href="#">Fire</a></li>
+                <li><a href="#">Mayor and City Council</a></li>
+                <li>
+                  <a href="#"></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <h4>Follow Us</h4>
 
-
+            <ul class="social-network social-circle">
+              <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+            </ul>
+          </div>
+        </div>
+        <br />
+        <div class="row col-lg-12">
+          <div class="col-lg-12 copy">
+            <p class="text-center">&copy; Copyright 2018 - Dravock Software Production. All rights reserved.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
         crossorigin="anonymous"></script>
+    <!-- skripte für Footer -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
