--- a/impressum_neu.html
+++ b/impressum_neu.html
@@ -9,90 +9,215 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+  <!-- footer css -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- eigene CSS -->
   <link rel="stylesheet" href="css/style.css">
 
   <title>All about WoW</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <div class="container-fluid">
-          <a class="navbar-brand btn btn-outline-success topbar-responsive-button txt-color" href="startseite_neu.html">Startseite</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color " aria-current="page" href="news_neu.html">News</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle btn btn-outline-success topbar-responsive-button txt-color " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dungeon
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="dos_neu.html">Die Andre Seite</a></li>
-                    <li><a class="dropdown-item" href="#">Die Nekrotische Schneiße</a></li>
-                    <li><a class="dropdown-item" href="#">Hallen der Sühne</a></li>
-                    <li><a class="dropdown-item" href="#">Blutige Tiefen</a></li>
-                    <li><a class="dropdown-item" href="#">Spitzen des Aufstiegs</a></li>
-                    <li><a class="dropdown-item" href="#">Nebel von Tirna Scithe</a></li>
-                    <li><a class="dropdown-item" href="#">Theater der Schmerzen</a></li>
-                    <li><a class="dropdown-item" href="#">Seuchensturz</a></li>
-                </ul>
-              </li>              
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle btn btn-outline-success topbar-responsive-button txt-color " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Raid
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="worldboss_neu.html">Schattenlande</a></li>
-                    <li><a class="dropdown-item" href="#">Schloss Nathria</a></li>
-                    <li><a class="dropdown-item" href="#">Ketten der Herrschaft</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color active" aria-current="page" href="impressum_neu.html">Impressum</a>
-              </li>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand btn btn-outline-success topbar-responsive-button txt-color"
+        href="startseite_neu.html">Startseite</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color " aria-current="page"
+              href="news_neu.html">News</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle btn btn-outline-success topbar-responsive-button txt-color " href="#"
+              id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Dungeon
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="dos_neu.html">Die Andre Seite</a></li>
+              <li><a class="dropdown-item" href="#">Die Nekrotische Schneiße</a></li>
+              <li><a class="dropdown-item" href="#">Hallen der Sühne</a></li>
+              <li><a class="dropdown-item" href="#">Blutige Tiefen</a></li>
+              <li><a class="dropdown-item" href="#">Spitzen des Aufstiegs</a></li>
+              <li><a class="dropdown-item" href="#">Nebel von Tirna Scithe</a></li>
+              <li><a class="dropdown-item" href="#">Theater der Schmerzen</a></li>
+              <li><a class="dropdown-item" href="#">Seuchensturz</a></li>
             </ul>
-            <form class="d-flex">
-              <div class="nav-item">
-                <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color reg "
-                    aria-current="page" href="registrieren.html">Registrieren</a>
-              </div>
-              <div class="nav-item">
-                <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color log "
-                    aria-current="page" href="login.html">Login</a>
-              </div>
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle btn btn-outline-success topbar-responsive-button txt-color " href="#"
+              id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Raid
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="worldboss_neu.html">Schattenlande</a></li>
+              <li><a class="dropdown-item" href="#">Schloss Nathria</a></li>
+              <li><a class="dropdown-item" href="#">Ketten der Herrschaft</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color active" aria-current="page"
+              href="impressum_neu.html">Impressum</a>
+          </li>
+        </ul>
+        <form class="d-flex">
+          <div class="nav-item">
+            <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color reg " aria-current="page"
+              href="registrieren.html"><i class="bi bi-file-earmark-person"></i>&NonBreakingSpace;Registrieren</a>
           </div>
-        </div>
-      </nav>
-      <div class="center row">
-        <div class="inhalt">
-          <div> </div>
-          <div class="col-md-8 offset-2 text1">
-              <img
-              src="img/kisspng-world-of-warcraft-logo-blizzard-entertainment-priv-portfolio-the-art-of-david-luong-5b7b8ea442e6b8.489604311534824100274 (1).png"
-              alt="Logo" class="logo">
-            <h1>Impressum</h1>
+          <div class="nav-item">
+            <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color log " aria-current="page"
+              href="login.html"><i class="bi bi-box-arrow-in-right"></i>&NonBreakingSpace;Login</a>
           </div>
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+  <div class="center row">
+    <div class="inhalt">
+      <div class="col-md-8 offset-2 text1">
+        <img
+          src="img/kisspng-world-of-warcraft-logo-blizzard-entertainment-priv-portfolio-the-art-of-david-luong-5b7b8ea442e6b8.489604311534824100274 (1).png"
+          alt="Logo" class="logo">        
+          <h1>Impressum</h1>
+          <div class="ba">
+          <div class="textimp">
+
+          <h2 class="h2imp">Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
+          <p>Deryan Keskin<br />
+            Sommerbergstraße 5<br />
+            75387 Neubulach</p>
+
+          <h2 class="h2imp">Kontakt</h2>
+          <p>Telefon: +49 (0) 123 44 55 66<br />
+            Telefax: +49 (0) 123 44 55 99<br />
+            E-Mail: Deryan@keskin-neubulach.de</p>
+
+          <h2 class="h2imp">Redaktionell Verantwortlicher</h2>
+          <p>Beate Beispielhaft<br />
+            Musterstra&szlig;e 110<br />
+            90210 Musterstadt</p>
+
+          <h3 class="h2imp">Haftung für Inhalte</h3>
+          <p>Als Diensteanbieter sind wir gem&auml;&szlig; &sect; 7 Abs.1 TMG f&uuml;r eigene Inhalte auf diesen Seiten
+            nach den allgemeinen Gesetzen verantwortlich. Nach &sect;&sect; 8 bis 10 TMG sind wir als Diensteanbieter
+            jedoch nicht verpflichtet, &uuml;bermittelte oder gespeicherte fremde Informationen zu &uuml;berwachen oder
+            nach Umst&auml;nden zu forschen, die auf eine rechtswidrige T&auml;tigkeit hinweisen.</p>
+          <p>Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen
+            bleiben hiervon unber&uuml;hrt. Eine diesbez&uuml;gliche Haftung ist jedoch erst ab dem Zeitpunkt der
+            Kenntnis einer konkreten Rechtsverletzung m&ouml;glich. Bei Bekanntwerden von entsprechenden
+            Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</p>
+          <h3 class="h2imp">Haftung f&uuml;r Links</h3>
+          <p>Unser Angebot enth&auml;lt Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben.
+            Deshalb k&ouml;nnen wir f&uuml;r diese fremden Inhalte auch keine Gew&auml;hr &uuml;bernehmen. F&uuml;r die
+            Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die
+            verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf m&ouml;gliche Rechtsverst&ouml;&szlig;e
+            &uuml;berpr&uuml;ft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar.</p>
+          <p>Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer
+            Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links
+            umgehend entfernen.</p>
+          <h3 class="h2imp">Urheberrecht</h3>
+          <p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen
+            Urheberrecht. Die Vervielf&auml;ltigung, Bearbeitung, Verbreitung und jede Art der Verwertung
+            au&szlig;erhalb der Grenzen des Urheberrechtes bed&uuml;rfen der schriftlichen Zustimmung des jeweiligen
+            Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur f&uuml;r den privaten, nicht
+            kommerziellen Gebrauch gestattet.</p>
+          <p>Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter
+            beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine
+            Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von
+            Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</p>
+
+          <p>Quelle: <a href="https://www.e-recht24.de">eRecht24</a></p>
         </div>
-    <div class="footer">
-      Dravock Software Production
+        </div>
+      </div>
     </div>
   </div>
+  <!-- footer Start -->
+  <footer class="mainfooter" role="contentinfo">
+    <div class="footer-middle">
+      <div class="container">
+        <div class="row col-lg-12">
+          <div class="col-lg-3 col-sm-6">
+            <!--Column1-->
+            <div class="footer-pad">
+              <h4>Heading 1</h4>
+              <ul class="list-unstyled">
+                <li><a href="#"></a></li>
+                <li><a href="#">Payment Center</a></li>
+                <li><a href="#">Contact Directory</a></li>
+                <li><a href="#">Forms</a></li>
+                <li><a href="#">News and Updates</a></li>
+                <li><a href="#">FAQs</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+            <!--Column1-->
+            <div class="footer-pad">
+              <h4>Heading 2</h4>
+              <ul class="list-unstyled">
+                <li><a href="#">Website Tutorial</a></li>
+                <li><a href="#">Accessibility</a></li>
+                <li><a href="#">Disclaimer</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">FAQs</a></li>
+                <li><a href="#">Webmaster</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+            <!--Column1-->
+            <div class="footer-pad">
+              <h4>Heading 3</h4>
+              <ul class="list-unstyled">
+                <li><a href="#">Parks and Recreation</a></li>
+                <li><a href="#">Public Works</a></li>
+                <li><a href="#">Police Department</a></li>
+                <li><a href="#">Fire</a></li>
+                <li><a href="#">Mayor and City Council</a></li>
+                <li>
+                  <a href="#"></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <h4>Follow Us</h4>
 
-
+            <ul class="social-network social-circle">
+              <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+            </ul>
+          </div>
+        </div>
+        <br />
+        <div class="row col-lg-12">
+          <div class="col-lg-12 copy">
+            <p class="text-center">&copy; Copyright 2018 - Dravock Software Production. All rights reserved.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
   <!-- Optional JavaScript; choose one of the two! -->
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
+  <!-- skripte für Footer -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
   <!-- Option 2: Separate Popper and Bootstrap JS -->
   <!--
