--- a/login.html
+++ b/login.html
@@ -9,25 +9,169 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+  <!-- footer bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- eigene css -->
   <link rel="stylesheet" href="css/style.css">
 
   <title>All about WoW</title>
 </head>
 
 <body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand btn btn-outline-success topbar-responsive-button txt-color" href="startseite_neu.html">Startseite</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color " aria-current="page" href="news_neu.html">News</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle btn btn-outline-success topbar-responsive-button txt-color " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Dungeon
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="dos_neu.html">Die Andre Seite</a></li>
+                <li><a class="dropdown-item" href="#">Die Nekrotische Schneiße</a></li>
+                <li><a class="dropdown-item" href="#">Hallen der Sühne</a></li>
+                <li><a class="dropdown-item" href="#">Blutige Tiefen</a></li>
+                <li><a class="dropdown-item" href="#">Spitzen des Aufstiegs</a></li>
+                <li><a class="dropdown-item" href="#">Nebel von Tirna Scithe</a></li>
+                <li><a class="dropdown-item" href="#">Theater der Schmerzen</a></li>
+                <li><a class="dropdown-item" href="#">Seuchensturz</a></li>
+            </ul>
+          </li>              
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle btn btn-outline-success topbar-responsive-button txt-color " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Raid
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="worldboss_neu.html">Schattenlande</a></li>
+                <li><a class="dropdown-item" href="#">Schloss Nathria</a></li>
+                <li><a class="dropdown-item" href="#">Ketten der Herrschaft</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color " aria-current="page" href="impressum_neu.html">Impressum</a>
+          </li>
+        </ul>
+        <form class="d-flex">
+          <div class="nav-item">
+            <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color reg "
+                aria-current="page" href="registrieren.html"><i class="bi bi-file-earmark-person"></i>&NonBreakingSpace;Registrieren</a>
+          </div>
+          <div class="nav-item">
+            <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color log active "
+                aria-current="page" href="login.html"><i class="bi bi-box-arrow-in-right"></i>&NonBreakingSpace;Login</a>
+          </div>
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+  <div class="center row">
+    <div class="inhalt">
 
-    <div class="footer">
-      Dravock Software Production
+      <div class="loginfenster">
+        <div class="loginfenster1">
+          <h1>All about WoW</h1>
+        </div>
+        <br />
+        <div class="loginfenster2">
+          <form action="/action_page.php">
+            <label for="email">E-mail:</label>
+            <input type="email" id="email" name="email"><br /><br />
+            <label for="pwd">Password:</label>
+            <input type="password" id="pwd" name="pwd" minlength="8"><br /><br />
+            <a href="#forgottpassword" class="passwordvergessen">Password vergessen?</a><br /><br />
+            <input type="submit" class="senden">
+          </form>
+        </div>
+      </div>
     </div>
   </div>
-
-
+  <footer class="mainfooter bottom" role="contentinfo">
+    <div class="footer-middle">
+      <div class="container">
+        <div class="row col-lg-12">
+          <div class="col-lg-3 col-sm-6">
+            <!--Column1-->
+            <div class="footer-pad">
+              <h4>Heading 1</h4>
+              <ul class="list-unstyled">
+                <li><a href="#"></a></li>
+                <li><a href="#">Payment Center</a></li>
+                <li><a href="#">Contact Directory</a></li>
+                <li><a href="#">Forms</a></li>
+                <li><a href="#">News and Updates</a></li>
+                <li><a href="#">FAQs</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+            <!--Column1-->
+            <div class="footer-pad">
+              <h4>Heading 2</h4>
+              <ul class="list-unstyled">
+                <li><a href="#">Website Tutorial</a></li>
+                <li><a href="#">Accessibility</a></li>
+                <li><a href="#">Disclaimer</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">FAQs</a></li>
+                <li><a href="#">Webmaster</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+            <!--Column1-->
+            <div class="footer-pad">
+              <h4>Heading 3</h4>
+              <ul class="list-unstyled">
+                <li><a href="#">Parks and Recreation</a></li>
+                <li><a href="#">Public Works</a></li>
+                <li><a href="#">Police Department</a></li>
+                <li><a href="#">Fire</a></li>
+                <li><a href="#">Mayor and City Council</a></li>
+                <li>
+                  <a href="#"></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <h4>Follow Us</h4>
+  
+            <ul class="social-network social-circle">
+              <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+            </ul>
+          </div>
+        </div>
+        <br />
+        <div class="row col-lg-12">
+          <div class="col-lg-12 copy">
+            <p class="text-center">&copy; Copyright 2018 - Dravock Software Production. All rights reserved.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
   <!-- Optional JavaScript; choose one of the two! -->
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-    crossorigin="anonymous"></script>
+      integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+      crossorigin="anonymous"></script>
+  <!-- skripte für Footer -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
   <!-- Option 2: Separate Popper and Bootstrap JS -->
   <!--
