--- a/news_neu.html
+++ b/news_neu.html
@@ -9,15 +9,20 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+    <!-- footer css -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- eigene CSS -->
     <link rel="stylesheet" href="css/style.css">
 
     <title>WoW News</title>
 </head>
 
 <body>
-    
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-            <div class="container-fluid">
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="container-fluid">
             <a class="navbar-brand btn btn-outline-success topbar-responsive-button txt-color "
                 href="startseite_neu.html">Startseite</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -66,12 +71,12 @@
                 <form class="d-flex">
                     <div class="nav-item">
                         <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color reg "
-                            aria-current="page" href="registrieren.html">Registrieren</a>
-                      </div>
-                      <div class="nav-item">
+                            aria-current="page" href="registrieren.html"><i class="bi bi-file-earmark-person"></i>&NonBreakingSpace;Registrieren</a>
+                    </div>
+                    <div class="nav-item">
                         <a class="nav-link btn btn-outline-success topbar-responsive-button txt-color log "
-                            aria-current="page" href="login.html">Login</a>
-                      </div>
+                        aria-current="page" href="login.html"><i class="bi bi-box-arrow-in-right"></i>&NonBreakingSpace;Login</a>
+                    </div>
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
@@ -80,64 +85,65 @@
     </nav>
     <div class="center row">
         <div class="inhalt">
-            <div class="col-md-8 offset-2 text1">
+            <div class="col-lg-8 offset-lg-2 text1">
                 <img class="logo"
-                        src="img/kisspng-world-of-warcraft-logo-blizzard-entertainment-priv-portfolio-the-art-of-david-luong-5b7b8ea442e6b8.489604311534824100274 (1).png"
-                        alt="Logo" >
+                    src="img/kisspng-world-of-warcraft-logo-blizzard-entertainment-priv-portfolio-the-art-of-david-luong-5b7b8ea442e6b8.489604311534824100274 (1).png"
+                    alt="Logo">
                 <h1>Neuigkeiten Rund um World of Warcraft</h1><br />
                 <div class="ba col-lg-12">
                     <a href="guide1.html">
                         <h2 class="BaÜberschriften">Der Goldguide</h2>
-                    </a>                    
+                    </a>
                     <div class="col-lg-12">
-                    <div class="col-lg-3"><img class="imgba" src="img/goldimg.jpg" alt="gold" ></div>
-                    <div class="txtba col-lg-12">
-                        dolor sit amet, consectetuer adipiscing elit. Aenean commodo
-                        ligula eget
-                        dolor. Aenean massa.
-                        Cum
-                        sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam
-                        felis,
-                        ultricies
-                        nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
-                        fringilla vel,
-                        aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae,
-                        justo.
-                        Nullam
-                        dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum
-                        semper nisi.
-                        Aenean
-                        vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac,
-                        enim.
-                        Aliquam
-                        lorem
-                        ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius
-                        laoreet.
-                        Quisque
-                        rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies
-                        nisi. Nam
-                        eget
-                        dui.
-                        Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit
-                        amet
-                        adipiscing
-                        sem neque sed ipsum.
-                    </div>
-                    <br />
+                        <div class="col-lg-3"><img class="imgba" src="img/goldimg.jpg" alt="gold"></div>
+                        <div class="txtba col-lg-12">
+                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
+                            ligula egetdolor. Aenean massa.Cumsociis natoque penatibus et magnis dis parturient montes,
+                            nascetur ridiculus mus. Donec quamelis,
+                            ultricies
+                            nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
+                            fringilla vel,
+                            aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae,
+                            justo.
+                            Nullam
+                            dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum
+                            semper
+                            nisi.
+                            Aenean
+                            vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac,
+                            enim.
+                            Aliquam
+                            lorem
+                            ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius
+                            laoreet.
+                            Quisque
+                            rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies
+                            nisi.
+                            Nam
+                            eget
+                            dui.
+                            Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit
+                            amet
+                            adipiscing
+                            sem neque sed ipsum.
+                        </div>
+                        <br />
                     </div>
                 </div>
                 <div class="trennlinie">
-                    <hr style="height: 10px; width: 100%; background-color:rgb(246, 244, 81); border: solid; " />
+                    <hr />
                 </div>
+                <br />
                 <div class="ba col-lg-12">
                     <a href="guide1.html">
-                    <h2 class="BaÜberschriften">Levelguide</h2>
-                </a>
-                    <div class="col-lg-3"><img class="imgba"src="img/world-of-warcraft-wow-classic-leveling-leveln-1-60.png"
-                            alt="lvlup" ></div>
+                        <h2 class="BaÜberschriften">Levelguide</h2>
+                    </a>
+                    <div class="col-lg-3"><img class="imgba"
+                            src="img/world-of-warcraft-wow-classic-leveling-leveln-1-60.png" alt="lvlup"></div>
                     <div class="txtba col-lg-12">
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
-                        ligula egetdolor. Aenean massa.Cumsociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quamelis,
+                        ligula egetdolor. Aenean massa.Cumsociis natoque penatibus et magnis dis parturient montes,
+                        nascetur ridiculus mus. Donec quamelis,
                         ultricies
                         nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
                         fringilla vel,
@@ -160,17 +166,19 @@
                         Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit
                         amet
                         adipiscing
-                        sem neque sed ipsum.</div>
+                        sem neque sed ipsum.
+                    </div>
                     <br />
                 </div>
                 <div class="trennlinie">
-                    <hr style="height: 10px; width: 100%; background-color:rgb(246, 244, 81); border: solid; " />
+                    <hr />
                 </div>
+                <br />
                 <div class="ba col-lg-12">
                     <a href="guide1.html">
-                    <h2 class="BaÜberschriften">Klassenänderungen</h2>
-                </a>
-                    <div class="col-lg-3"><img class="imgba" src="img/Screenshot_Full_-_Armor_1.jpg" 
+                        <h2 class="BaÜberschriften">Klassenänderungen</h2>
+                    </a>
+                    <div class="col-lg-3"><img class="imgba" src="img/Screenshot_Full_-_Armor_1.jpg"
                             alt="classchange" />
                     </div>
                     <div class="txtba col-lg-12">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
@@ -205,25 +213,90 @@
                     </div>
                     <br />
                 </div>
-                <div class="trennlinie"> 
-                <hr style="height: 10px; width: 100%; background-color:rgb(246, 244, 81); border: solid; " />
-                
-                </div> 
+                <div class="trennlinie">
+                    <hr />
+                </div>
+                <br />
             </div>
         </div>
-        <div class="footer row">
-            Dravock Software Production
-        </div>
     </div>
+    <!-- footer Start -->
+    <footer class="mainfooter" role="contentinfo">
+        <div class="footer-middle">
+            <div class="container">
+                <div class="row col-lg-12">
+                    <div class="col-lg-3 col-sm-6">
+                        <!--Column1-->
+                        <div class="footer-pad">
+                            <h4>Heading 1</h4>
+                            <ul class="list-unstyled">
+                                <li><a href="#"></a></li>
+                                <li><a href="#">Payment Center</a></li>
+                                <li><a href="#">Contact Directory</a></li>
+                                <li><a href="#">Forms</a></li>
+                                <li><a href="#">News and Updates</a></li>
+                                <li><a href="#">FAQs</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <!--Column1-->
+                        <div class="footer-pad">
+                            <h4>Heading 2</h4>
+                            <ul class="list-unstyled">
+                                <li><a href="#">Website Tutorial</a></li>
+                                <li><a href="#">Accessibility</a></li>
+                                <li><a href="#">Disclaimer</a></li>
+                                <li><a href="#">Privacy Policy</a></li>
+                                <li><a href="#">FAQs</a></li>
+                                <li><a href="#">Webmaster</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <!--Column1-->
+                        <div class="footer-pad">
+                            <h4>Heading 3</h4>
+                            <ul class="list-unstyled">
+                                <li><a href="#">Parks and Recreation</a></li>
+                                <li><a href="#">Public Works</a></li>
+                                <li><a href="#">Police Department</a></li>
+                                <li><a href="#">Fire</a></li>
+                                <li><a href="#">Mayor and City Council</a></li>
+                                <li>
+                                    <a href="#"></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <h4>Follow Us</h4>
 
-
+                        <ul class="social-network social-circle">
+                            <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <br />
+                <div class="row col-lg-12">
+                    <div class="col-lg-12 copy">
+                        <p class="text-center">&copy; Copyright 2018 - Dravock Software Production. All rights reserved.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
         crossorigin="anonymous"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
